--- a/app/package.json
+++ b/app/package.json
@@ -2,6 +2,7 @@
   "name": "training_architecture_logicielle_tp01",
   "version": "1.0.0",
   "dependencies": {
+    "axios": "^0.24.0",
     "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1"
