--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "axios": "^0.24.0",
     "express": "^4.17.1",
+    "https": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.2.0"
+    "mongodb": "^4.2.0",
+    "url": "^0.11.0"
   }
 }
